--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -16,4 +17,5 @@
 	<body>
 		<div id="root"></div>
 	</body>
+	<!--<script src="jquery-3.4.1.js"></script> -->
 </html>
