--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="stylesheet" href="somestyle.css">
+    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 		<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbf88b63289e53ff48ff1ee64e9f6932&libraries=services"></script>
 		<title>Open Source - 배추터</title>
 	</head>
